// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders text with few matches 1`] = `
<DocumentFragment>
  <div
    class="css-view-175oi2r"
    style="gap: 16px;"
  >
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      A
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
       
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      t
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      e
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      x
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      t
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
       
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      w
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      i
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      t
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      h
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      o
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      u
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      t
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
       
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      m
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      a
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      t
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      c
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      h
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      e
    </div>
    <div
      class="css-text-146c3p1"
      dir="auto"
      style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
    >
      s
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders text without matches 1`] = `
<DocumentFragment>
  <div
    class="css-text-146c3p1 r-maxWidth-dnmrzs r-overflow-1udh08x r-textOverflow-1udbk01 r-whiteSpace-3s2u2q r-wordWrap-1iln25a"
    dir="auto"
    style="font-size: 19px; line-height: 24px; font-family: Basel Grotesk; font-weight: 400;"
  >
    A text without matches
  </div>
</DocumentFragment>
`;
